--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>4.1.5.SP1</version>
+			<version>3.6.10.Final</version>
 		</dependency>
 
         <dependency>
